# scired

./: Cargo.toml  README.md  default_config.yaml
examples/: client.rs  hello-scired.rs
src/: main.rs  scyllamgr.rs  server.rs
