[package]
name = "scired"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
scylla = "0.12.0"
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
config = {version = "0.14.0"}
serde_derive = { version = "1.0.197" }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.34"
